[package]
name = "simple-std"
version = "0.1.0"
edition = "2018"
description = "A simple extension to the Rust standard library for exercises"
keywords = ["beginner", "help"]
license = "MIT"
homepage = "https://github.com/Nilstrieb/simple-std/"
repository = "https://github.com/Nilstrieb/simple-std/"
